--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -243,7 +243,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     margin-bottom: 2rem;
 
     a {
