--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -91,10 +91,10 @@
       }
     }
     &-articles {
-      .articles {
-        display: flex;
-        flex-direction: column;
-      }
+      // .articles {
+      //   display: flex;
+      //   // flex-direction: column;
+      // }
     }
   }
 }
@@ -177,13 +177,15 @@
     }
   }
 
-  // .roadmap__box {
-  //   &-articles {
-  //     .articles.article__link {
-  //       margin-bottom: 2rem;
-  //     }
-  //   }
-  // }
+  .roadmap__box {
+    &-articles {
+      .articles {
+        .article__link {
+          width: 50%;
+        }
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 630px) {
@@ -234,6 +236,18 @@
     .forPath {
       @include fontSm;
       width: 35%;
+    }
+  }
+
+  .roadmap__box {
+    &-articles {
+      .articles {
+        flex-direction: column;
+        align-items: center;
+        .article__link {
+          width: 75%;
+        }
+      }
     }
   }
 }
