--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -7,7 +7,7 @@
   position: relative;
   display: block;
   cursor: pointer;
-  outline: none;
+  // outline: none;
   z-index: 10;
 
   &::before {
@@ -25,6 +25,10 @@
     opacity: 0.4;
     width: 100%;
   }
+
+  &:focus {
+    border: 5px solid #ffffff;
+  }
 }
 
 .btn-rnd {
@@ -34,10 +38,18 @@
   &::before {
     border-radius: 13px;
   }
+
+  &:focus {
+    border: 5px solid #ffffff;
+  }
 }
 
 .btn-red {
   background-color: $color-dark-1;
+
+  &:focus {
+    border: 5px solid #ffffff;
+  }
 }
 
 .btn-active {
