--- a/src/sass/pages/_webdev.scss
+++ b/src/sass/pages/_webdev.scss
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    text-align: center; 
+    text-align: center;
     margin-bottom: 4rem;
 
     &-title {
@@ -21,9 +21,6 @@
     .process {
       width: 80%;
       margin: 0 auto;
-      color: $color-dark-2;
-      @include fontMd;
-      font-weight: 500;
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -44,12 +41,19 @@
         height: 20rem;
         width: 20rem;
         border-radius: 50%;
+        color: $color-dark-2;
         background-color: $color-light-2;
+        @include fontMd;
+        font-weight: 500;
         cursor: pointer;
         transition: all 0.5s ease-in-out;
 
         &:hover {
           color: $color-dark-1;
+        }
+
+        &:focus {
+          border: 3px solid #ffffff;
         }
       }
     }
